--- a/Laboratory/View/LabCreateView.xib
+++ b/Laboratory/View/LabCreateView.xib
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LabCreateView" customModule="Laboratory" customModuleProvider="target">
             <connections>
+                <outlet property="addItemsBtn" destination="gSt-bB-Eni" id="dWS-hW-uG1"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="tZf-xW-nu8"/>
                 <outlet property="descriptionTextField" destination="OCt-80-gVw" id="dOD-97-d8d"/>
                 <outlet property="labItemTV" destination="e7i-yQ-Tle" id="Be7-Oi-bJ0"/>
