attempt to make a check box

--- a/Laboratory/View/LabItemSelectionTVCell.xib
+++ b/Laboratory/View/LabItemSelectionTVCell.xib
@@ -19,27 +19,24 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sfu-Q3-u9G">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sfu-Q3-u9G">
                         <rect key="frame" x="10" y="11.5" width="42" height="21"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ful-ah-UhD">
-                        <rect key="frame" x="288" y="11" width="22" height="22"/>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ful-ah-UhD">
+                        <rect key="frame" x="245" y="11" width="22" height="22"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </button>
                 </subviews>
-                <constraints>
-                    <constraint firstItem="ful-ah-UhD" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="JeV-ae-OgZ"/>
-                    <constraint firstItem="Sfu-Q3-u9G" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="lQb-zN-W99"/>
-                    <constraint firstItem="Sfu-Q3-u9G" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="oR6-eh-xvA"/>
-                    <constraint firstAttribute="trailing" secondItem="ful-ah-UhD" secondAttribute="trailing" constant="10" id="zyh-EH-0rA"/>
-                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="itemNameLabel" destination="Sfu-Q3-u9G" id="IVc-p8-4vh"/>
             </connections>
+            <point key="canvasLocation" x="137.68115942028987" y="124.55357142857142"/>
         </tableViewCell>
     </objects>
 </document>
