add Observable to View Models

--- a/Laboratory/View/LabItemSelectionTVCell.xib
+++ b/Laboratory/View/LabItemSelectionTVCell.xib
@@ -26,11 +26,14 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ful-ah-UhD">
-                        <rect key="frame" x="245" y="11" width="22" height="22"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ful-ah-UhD">
+                        <rect key="frame" x="250" y="11" width="22" height="22"/>
                     </button>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="ful-ah-UhD" secondAttribute="trailing" constant="48" id="OKj-TG-Wh5"/>
+                    <constraint firstItem="ful-ah-UhD" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="RNw-jl-L7b"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
